# pods.erf.plot-server

./: CMakeLists.txt  README
MathBox.js/: MathBox-bundle.min.js  MathBox-core.min.js  MathBox.min.js  mathbox-example-axis.html
cmake/: pods.cmake
src/: plot.cpp  plot.hpp
src/api/: common_plots.cpp  common_plots.hpp  internal.cpp  internal.hpp  plot.cpp  plot.hpp
src/plotter/: plotter.cpp  plotter.hpp
src/server/: couchdb_views.json  main.cpp
src/util/: color.cpp  color.hpp
test/: CMakeLists.txt  test-api.cpp  test-color.cpp  test-common-plots.cpp  test-plotter.cpp
